styles bug fixed movie-btn icon aligned center

--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -153,7 +153,8 @@ button {
   font-size: 20px;
   /* color: var(--purple-light-1); */
   left: 50%;
-  transform: translate(-50%, 0);
+  top: 50%;
+  transform: translate(-50%, -50%);
 }
 
 .movie-btn--liked {
